instead of a cached copy of setenv.sh in src/assembly/setenv.sh, pull from target/dependency/bin/setenv.sh and transform with regex
Change-Id: Id365be737de181e3edfd71f61fa2d0205b53cc25
Signed-off-by: nickboldt <nboldt@redhat.com>